test_suite/ui/not_enum.stderr
error: #[bitflags] requires an enum
 --> ui/not_enum.rs:5:1
  |
5 | / #[derive(Copy, Clone)]
6 | | struct Foo(u16);
  | |________________^

error: #[bitflags] requires an enum
 --> ui/not_enum.rs:9:1
  |
9 | const WTF: u8 = 42;
  | ^^^^^^^^^^^^^^^^^^^
